global-network-policy/kafka/kafka-wallets-hooker-CiliumNetworkPolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "kafkaPolicy-wallets-hooker"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kafka
  ingress:
    - toPorts:
      - ports:
        - protocol: TCP
          port: "9092"
      fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: wallets-hooker
      rules:
        kafka:
          - role: produce
            topic: webhooks
