global-network-policy/kafka/kafka-wallets-hooker-kafka-CiliumNetworkPolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "kafkaPolicy-wallets-hooker-kafka"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kafka
  ingress:
    - toPorts:
      - ports:
        - protocol: TCP
          port: "9092"
      fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: wallets-hooker-kafka
      rules:
        kafka:
          - role: consume
            topic: mg-events-ff-destination
          - role: consume
            topic: mg-events-ff-wallet
          - role: consume
            topic: mg-events-ff-withdrawal
